@@ -1,4 +1,4 @@
-.TH "UFW FRAMEWORK" "8" "" "September 2021" "September 2021"
+.TH "UFW FRAMEWORK" "8" "" "May 2023" "May 2023"
 
 .SH NAME
 ufw\-framework \- using the ufw framework
@@ -318,4 +318,4 @@ to allow all traffic to be forwarded across the bridge. Eg, add to
 
 .SH AUTHOR
 .PP
-ufw is Copyright 2008-2021, Canonical Ltd.
+ufw is Copyright 2008-2023, Canonical Ltd.
