@@ -1,4 +1,4 @@
-.TH "UFW ON SNAPPY" "8" "" "September 2021" "September 2021"
+.TH "UFW ON SNAPPY" "8" "" "May 2023" "May 2023"
 
 .SH NAME
 ufw snap \- using ufw as a snap
@@ -71,4 +71,4 @@ merged manually.
 
 .SH AUTHOR
 .PP
-ufw is Copyright 2008-2021, Canonical Ltd.
+ufw is Copyright 2008-2023, Canonical Ltd.
