@@ -38,9 +38,9 @@ msg_output = None # for redirecting stdout in msg() and write_to_file()
 
 # We support different protocols these days and only come combinations are
 # valid
-supported_protocols = [ 'tcp', 'udp', 'ipv6', 'esp', 'ah', 'igmp', 'gre' ]
-portless_protocols = [ 'ipv6', 'esp', 'ah', 'igmp', 'gre' ]
-ipv4_only_protocols = [ 'ipv6', 'igmp' ]
+supported_protocols = ["tcp", "udp", "ipv6", "esp", "ah", "igmp", "gre", "vrrp"]
+portless_protocols = ["ipv6", "esp", "ah", "igmp", "gre", "vrrp"]
+ipv4_only_protocols = ["ipv6", "igmp"]
 
 
 def get_services_proto(port):
