@@ -117,6 +117,9 @@ class ApplicationsTestCase(unittest.TestCase):
                     {'title': 'bad protocol - ipv6',
                      'description': 'desc',
                      'ports': '80/ipv6'},
+                    {'title': 'bad protocol - vrrp',
+                     'description': 'desc',
+                     'ports': '80/vrrp'},
                     ]
         for p in profiles:
             print(" %s" % p)
